<resources>
    <string name="app_name">Book Sharing</string>
    <string name="user_name">Name</string>
    <string name="user_surname">Surname</string>
    <string name="user_email">Email</string>
    <string name="user_address">Address</string>
    <string name="user_zone">Zone</string>
    <string name="user_zipCode">Zip Cc</string>
    <string name="user_PhoneNumber">Phone Number"</string>
    <string name="user_city">City</string>
    <string name="user_ShortBio">Short Bio</string>
    <string name="edit_profile">Edit profile</string>
    <string name="description">Description</string>
    <string name="edit">Edit</string>
    <string name="save">Save</string>
    <string name="not_empty">This field must not be empty</string>
    <string name="select_action">Select Action</string>
    <string name="camera">Capture photo from camera</string>
    <string name="gallery">Select photo from gallery</string>
    <string name="save_image">Image Saved!</string>
    <string name="failed">Failed!</string>
    <string name="permission">Permission required!</string>
    <string name="permission_message">You need to provide this permission to properly use this app!</string>
    <string name="more">More</string>

    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="signin_email">Sign in with email</string>
    <string name="by_telephone">Continue with phone</string>
    <string name="no_account">Don\'t you have an account?</string>
    <string name="free_signup">Sign up for free!</string>
    <string name="access">Access</string>
    <string name="or">Or</string>
    <string name="welcome">Welcome</string>
    <string name="add_book">Add a new book</string>
    <string name="extra_tags">Extra tags</string>
    <string name="title">Title</string>
    <string name="author">Author</string>

    <string name="edition_year">Edition year</string>
    <string name="book_conditions">Book conditions</string>
    <string name="genre">Genre</string>
    <string name="press_button">Press the button to see and edit your personal information</string>
    <string name="profile_info">Access profile info</string>
    <string name="login">Login</string>
    <string name="insert_code">Insert the received code</string>
    <string name="fetching_data">Fetching data from our servers</string>
    <string name="book_insert_hint">This book will be available in your library and you will be able to share it with your friends.</string>
    <string name="press_insert_book">Press the button to insert a new book in your library</string>

    <string name="my_profile">My Profile</string>
    <string name="my_books">My Books</string>
    <string name="exit">Log out</string>
    <string name="points">My points</string>
    <string name="search">Search</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="register">Sign up</string>
    <string name="register_email">Sign up with email</string>

    <string name="user_pass_not_empty">Username and password fields must not be empty</string>
    <string name="cant_empty">This field cannot be empty</string>
    <string name="user_not_found">USER NOT FOUND</string>
    <string name="authentication_failed">Authentication failed.</string>
    <string name="credentials">Credentials are bad formatted</string>
    <string name="email_not_found">This email is not present in our system</string>

    <string name="invalid_code">The code is invalid</string>
    <string name="wrong_phone_format">"Phone number must be formatted with global format. ([+][country code][subscriber number including area code])"</string>
    <string name="edit_complete">Modification has been successfully completed</string>
    <string name="try_again">There was an error. Please retry later</string>
    <string name="wait_book_insert">We are performing the insertion of your book inside our database. Please wait...</string>
    <string name="insert_complete">Insertion has been accomplished successfully</string>
    <string name="available_book">This book will be available in your library and you will be able to share it with your friends.</string>
    <string name="barcode_scan">Scan the barcode of your book to retrieve its information online</string>
    <string name="wait_book_retrieve">We are retrieving information about your book on the Internet. Please wait...</string>
    <string name="wait_for_connection">You cannot modify your profile until a connection with the server is established</string>
    <string name="have_account_already">Have you already an account?</string>
    <string name="publisher">Publisher</string>
    <string name="wrong_password">The password is incorrect</string>
    <string name="sign_in">Sign in now!</string>
    <string name="all_books">All books</string>
    <string name="lent_books">Lent books</string>
    <string name="available_books">Available books</string>
    <string name="home">Home</string>
    <string name="inbox">Inbox</string>
    <string name="edit_book">Edit Book</string>
    <string name="book_not_found">Book not found</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="user_username">Username</string>
    <string name="requests_text">My requests</string>
    <string name="outgoing_requests">Outgoing requests</string>
    <string name="incoming_requests">Incoming requests</string>
    <string name="Type_message">Type your message</string>

    <string name="start_date">Start date:</string>
    <string name="end_date">End date:</string>
    <string name="tap_start_date">Tap to insert start date</string>
    <string name="tap_end_date">Tap to insert end date</string>

    <string name="all_availabe_book">All books available</string>
    <string name="Favorite_category">Favorite category</string>
    <string name="new_books">New Books</string>

    <string name="no_reservation">There is no reservation request.</string>

    <string name="first_page_message">Log in to start sharing your books, view proposals offered by other users and start the exchange</string>

    <string name="search_filter">Enter search filters</string>

    <string name="point_informtion">Click the pointers to receive more information about the results</string>

    <string name ="comments">Comments</string>
    <string name="cancel">Cancel</string>
    <string name="operations">Operations</string>
    <string name="status">Status:</string>

    <string name="rate_experience">Rate Your Experience</string>
    <string name="comment">Comment about:</string>
    <string name="comment2">Comment</string>

    <string name="search_not_found">Nothing founded for this search."</string>

    <string name="new_message">A new message arrived!</string>

    <string name="feedback">Feedback correctly inserted</string>

    <string name="exit_q">Are you sure that you want to close the app?</string>

    <string name="yes">Yes</string>

    <string name="insert_manually">It is not possible to retrieve data automatically from this book. Please insert its information manually.</string>
    <string name="received_request">You have received a new book request from </string>
    <string name="owner">Owner</string>

    <string name="book_request">You have received a new book request. </string>
    <string name="modify_book_txt">Modify your book</string>
    <string name="aforisma">\'There are no faster or firmer friendships than those formed between people who love the same books.\' - Irving Stone</string>
    <string name="available_book_txt">This book is available</string>
    <string name="not_available_book_txt">This book is not available</string>
    <string name="correctly_requested">The request has been done with success</string>
    <string name="unsuccessfully_requested">This procedure has encountered an error. Please retry later</string>
    <string name="unavailable_operation">You cannot request for an already borrowed book</string>
    <string name="are_you_sure">Are you sure you want to borrow this book?</string>
    <string name="confirm_reception">Confirm the reception of the book</string>
    <string name="not_yet">No, not yet</string>
    <string name="finalize_borrowing">Finalize borrowing</string>
    <string name="have_you_sent_back">Have you sent the book back to the owner?</string>
    <string name="yes_I_have">Yes, I have</string>
    <string name="are_you_sure_to_cancel">Are you sure you want to cancel this reservation? The owner will be notified about your decision</string>
    <string name="accepted_request">Your request has been accepted by the owner and he will soon send the book to you</string>
    <string name="book_status_sentback">Book status: Sent Back</string>
    <string name="not_received_yet">The book you have sent hasn\'t been received by the owner yet</string>
    <string name="book_status_accepted">Book status: Accepted</string>
    <string name="request_accepted">Your request has been accepted by the owner and he will soon send the book to you</string>
    <string name="refuse_request">DELETE REQUEST</string>
    <string name="accept_request">ACCEPT REQUEST</string>
    <string name="finalize_lending">Finalize the lending</string>
    <string name="lending_finalization">Lending finalization</string>
    <string name="have_you_received_book">Have you received your book back from the borrower?</string>
    <string name="yes_book_back">Yes, I have got my book back</string>
    <string name="not_received">No, I haven\'t received it</string>
    <string name="cancel_request">CANCEL REQUEST</string>
    <string name="delete_book_request">Delete book request</string>
    <string name="are_you_sure_to_reject">Are you sure you want to reject this reservation? The borrower will be notified about your decision</string>
    <string name="ok_delete_it">OK, delete it</string>
    <string name="start_lending">START LENDING</string>
    <string name="more_info">More info about the book</string>
    <string name="book_status_sent">Book status: SENT</string>
    <string name="book_sent_not_received">The book has been sent to the borrower but it has not been received or it has not been notified by him/her</string>
    <string name="book_status_received">Book status: RECEIVED</string>
    <string name="book_received_correctly">The book has been received correctly by the borrower</string>
    <string name="contact_borrower">Contact the borrower</string>
    <string name="ok">Ok</string>
    <string name="contact_owner">Chat with the owner</string>
    <string name="borrow_request">Borrow this book</string>
</resources>

