<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/home"
        android:icon="@drawable/ic_home_white_24dp"
        android:title="@string/home"
        android:checked="true"></item>
    <item
        android:id="@+id/my_profile"
        android:icon="@drawable/ic_account_circle_white_24dp"
        android:title="@string/my_profile"></item>
    <item
        android:id="@+id/my_books"
        android:icon="@drawable/ic_book_white_24dp"
        android:title="@string/my_books"
        ></item>
    <item
        android:id="@+id/requests"
        android:icon="@drawable/ic_email_white_24dp"
        android:title="@string/requests_text"></item>


    <item
        android:id="@+id/inbox"
        android:icon="@android:drawable/sym_action_chat"
        android:title="@string/inbox"></item>
    <item
        android:id="@+id/search"
        android:icon="@drawable/ic_search_white_24dp"
        android:title="@string/search"></item>
    <item
        android:id="@+id/mypoints"
        android:icon="@drawable/ic_star_rate_white_18dp"
        android:title="@string/points"></item>





    <item
        android:id="@+id/exit"
        android:icon="@drawable/ic_exit_to_app_white_24dp"
        android:title="@string/exit"></item>
</menu>